--- a/src/app/pages/categoria/categoria.component.html
+++ b/src/app/pages/categoria/categoria.component.html
@@ -10,13 +10,13 @@
     </div>
 </div>
 <hr>
-<input #texto (keyup)="0" type="text" class="form-control" placeholder="filtrar">
+<input #texto (keyup)="0" type="text" class="mb-3 form-control" placeholder="filtrar">
 <table class="table table-hover">
-    <thead class="text-center">
+    <thead>
         <th>Código</th>
         <th>Nome</th>
         <th>Descrição</th>
-        <th>Eventos</th>
+        <th class="text-center">Eventos</th>
     </thead>
     <tbody>
         <tr *ngFor="let categoria of categorias | filtroPorNomeCategoria: texto.value">
@@ -24,10 +24,10 @@
             <td>{{categoria.nome}}</td>
             <td>{{categoria.descricao}}</td>
             <td class="text-center">
-                <button style="margin: 5px;" class="btn btn-warning">
+                <button [routerLink]="['/alterar-categorias']" [queryParams]="{id: categoria.idCategoria}" style="margin-left: 5px;margin-right: 5px;" class="btn btn-warning">
                     <i class="fas fa-pencil-alt"></i>
                 </button>
-                <button (click)="remover(categoria)" style="margin: 5px;" class="btn btn-danger">
+                <button (click)="remover(categoria)" style="margin-left: 5px;margin-right: 5px;" class="btn btn-danger">
                     <i class="fas fa-trash-alt"></i>
                 </button>
             </td>
